// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overlay snapshots should match snapshot when isVisible="false" 1`] = `
<Overlay
  isScrollable={false}
  isVisible={false}
  onClose={[Function]}
  shouldCloseOnClick={true}
  transparent={false}
>
  <CSSTransition
    classNames="luk-fade"
    in={false}
    mountOnEnter={true}
    timeout={200}
    unmountOnExit={true}
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={false}
      mountOnEnter={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={200}
      unmountOnExit={true}
    />
  </CSSTransition>
</Overlay>
`;

exports[`overlay snapshots should match snapshot when isVisible="true" 1`] = `
<Overlay
  isScrollable={false}
  isVisible={true}
  onClose={[Function]}
  shouldCloseOnClick={true}
  transparent={false}
>
  <CSSTransition
    classNames="luk-fade"
    in={true}
    mountOnEnter={true}
    timeout={200}
    unmountOnExit={true}
  >
    <Transition
      appear={false}
      enter={true}
      exit={true}
      in={true}
      mountOnEnter={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={200}
      unmountOnExit={true}
    >
      <Portal>
        <Portal
          containerInfo={
            <div
              lattice-portal-inner-container=""
            >
              <div
                class="kcBBUu"
              >
                <div
                  class="huVzSq"
                >
                  <span>
                    hello
                  </span>
                </div>
              </div>
            </div>
          }
        >
          <TouchScrollable>
            <OverlayOuterContainer
              transparent={false}
            >
              <div
                className="kcBBUu"
              >
                <OverlayInnerContainer
                  isScrollable={false}
                  onClick={[Function]}
                >
                  <div
                    className="huVzSq"
                    onClick={[Function]}
                  >
                    <span>
                      hello
                    </span>
                  </div>
                </OverlayInnerContainer>
              </div>
            </OverlayOuterContainer>
          </TouchScrollable>
        </Portal>
      </Portal>
    </Transition>
  </CSSTransition>
</Overlay>
`;
